--- a/learnframer/index.html
+++ b/learnframer/index.html
@@ -7,8 +7,8 @@
     <link rel="alternate" href="http://learnframer.ru/feed.xml" type="application/rss+xml" title="Блог о прототипировании интерактивных продуктов">
     <title>Learn Framer
     </title>
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/highlight.css">
+    <link rel="stylesheet" href="https://antonkartashov.github.io/learnframer/css/main.css">
+    <link rel="stylesheet" href="https://antonkartashov.github.io/learnframer/css/highlight.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800,800italic,700italic,700,600italic,600,400italic,300italic,300&amp;subset=latin,cyrillic,cyrillic-ext,latin-ext" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700&amp;subset=latin,cyrillic-ext,cyrillic,latin-ext" rel="stylesheet" type="text/css"><link href="https://fonts.googleapis.com/css?family=Roboto+Mono&amp;subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
   </head>
