--- a/learnframer/index.html
+++ b/learnframer/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
     <link rel="alternate" href="http://learnframer.ru/feed.xml" type="application/rss+xml" title="Блог о прототипировании интерактивных продуктов">
-    <title>Learn Framer
-    </title>
+    <title>Learn Framer</title>
     <link rel="stylesheet" href="https://antonkartashov.github.io/learnframer/css/main.css">
     <link rel="stylesheet" href="https://antonkartashov.github.io/learnframer/css/highlight.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800,800italic,700italic,700,600italic,600,400italic,300italic,300&amp;subset=latin,cyrillic,cyrillic-ext,latin-ext" rel="stylesheet" type="text/css">
