--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
     <style>
       body {
         font-family: 'Roboto Mono', monospace;
-        margin: 20px;
+        font-size: 14px;
+        margin: 40px;
       }
     </style>
   </head>
   <body>
-    <p><strong>Прототипы</strong></p>
+    <p><strong>Design Prototypes</strong></p>
+
     <p><a href="https://antonkartashov.github.io/learnframer">Learn Framer</a></li></p>
+    <p><a href="https://antonkartashov.github.io/mann-ivanov-ferber/animation-01-hard">Mann, Ivanov, and Ferber</a>, 2019</li></p>
+
+    <p><a href="https://antonkartashov.github.io/learnframer">Learn Framer</a>, 2016</li></p>
   </body>
 </hml>
