--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
-    <title>Anton Kartashov</title>
+    <title>Anton Kartashov: Design Prototypes</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,17 +13,30 @@
     <style>
       body {
         font-family: 'Roboto Mono', monospace;
-        font-size: 14px;
+        font-size: 20px;
         margin: 40px;
+        color: #333;
+      }
+
+      a, a:visited {
+        color: #333;
+        text-decoration: none;
+        border-bottom: 1.5px solid rgba(0, 0, 0, .5);
+      }
+
+      a:hover {
+        color: #333;
+        border-bottom: 1.5px solid rgba(0, 0, 0, .5);
+        padding-bottom: 2px;
       }
     </style>
   </head>
   <body>
     <p><strong>Design Prototypes</strong></p>
 
-    <p><a href="https://antonkartashov.github.io/learnframer">Learn Framer</a></li></p>
+    <p><a href="https://antonkartashov.github.io/profi-x/machinery">Profi X</a>, 2022</li></p>
     <p><a href="https://antonkartashov.github.io/mann-ivanov-ferber/animation-01-hard">Mann, Ivanov, and Ferber</a>, 2019</li></p>
-
+    <p><a href="https://antonkartashov.github.io/randomuserme-api">RandomUser.Me API</a>, 2017</li></p>
     <p><a href="https://antonkartashov.github.io/learnframer">Learn Framer</a>, 2016</li></p>
   </body>
 </hml>
