Random User API

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
     <style>
       body {
+        background-color: #faf5f5;
         font-family: 'Roboto Mono', monospace;
-        font-size: 20px;
+        font-size: 15px;
         margin: 40px;
         color: #333;
       }
@@ -21,13 +22,14 @@
       a, a:visited {
         color: #333;
         text-decoration: none;
-        border-bottom: 1.5px solid rgba(0, 0, 0, .5);
+        border-bottom: 1px solid black;
+        transition: 0.15s;
       }
 
       a:hover {
-        color: #333;
-        border-bottom: 1.5px solid rgba(0, 0, 0, .5);
-        padding-bottom: 2px;
+        color: firebrick;
+        border-bottom: 1px solid firebrick;
+        padding-bottom: 3px;
       }
     </style>
   </head>
