--- a/randomuserme-api/index.html
+++ b/randomuserme-api/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		
+
 		<meta name="format-detection" content="telephone=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -17,6 +17,8 @@
  		document.write("<meta name=\"viewport\" content=\"" + viewport + "\">")
 		})()
 		</script>
+
+		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
 		<link rel="apple-touch-icon" href="framer/images/icon-120.png">
 		<link rel="apple-touch-icon" href="framer/images/icon-76.png" sizes="76x76">
