--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <body>
     <p><strong>Design Prototypes</strong></p>
 
-    <p><a href="https://antonkartashov.github.io/profi-x/machinery">Profi X</a>, 2022</li></p>
+    <p><a href="https://antonkartashov.github.io/profi/machinery">Profi X</a>, 2022</li></p>
     <p><a href="https://antonkartashov.github.io/mann-ivanov-ferber/animation-01-hard">Mann, Ivanov, and Ferber</a>, 2019</li></p>
     <p><a href="https://antonkartashov.github.io/randomuserme-api">Random User API</a>, 2017</li></p>
     <p><a href="https://antonkartashov.github.io/learnframer">Learn Framer</a>, 2016</li></p>
