--- a/profi/machinery/index.html
+++ b/profi/machinery/index.html
@@ -23,8 +23,7 @@
 		}
 
 		body {
-			background: black url('images/background.png')
-				repeat scroll top left;
+			background: black;
 			font: 28px/1em "Helvetica";
 			color: #FFF;
 			-webkit-tap-highlight-color: rgba(0,0,0,0)
