--- a/profi/2023-05-24-order-velocity-direction/index.html
+++ b/profi/2023-05-24-order-velocity-direction/index.html
@@ -13,6 +13,10 @@
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="icon/apple-touch-icon-72x72-precomposed.png">
 		<link rel="apple-touch-icon-precomposed" href="icon/apple-touch-icon-precomposed.png">
 
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+
 		<style type="text/css" media="screen">
 
 		* {
