--- a/profi/2023-05-25-velocity/index.html
+++ b/profi/2023-05-25-velocity/index.html
@@ -40,11 +40,9 @@
 		</style>
 
 	</head>
-	<body>
+	<body style="background-image: url(images/pattern.png); background-repeat: repeat">
 		<script src="framer/framer.js"></script>
-		<script src="base.js"></script>
-		<script src="design.js"></script>
+		<script src="classes.js"></script>
 		<script src="app.js"></script>
-		<script src="small-header.js"></script>
 	</body>
 </html>
